gcc: fix bootstrap conflicts with regular style

--- a/prologin/gcc/templates/gcc/users/profile.html
+++ b/prologin/gcc/templates/gcc/users/profile.html
@@ -5,6 +5,10 @@
 
 {% block title %}GCC! − Inscription{% endblock %}
 
+{% block head %}
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}"/>
+{% endblock %}
+
 {% block content %}
 <section class="wrapper">
     <div class="container">
