--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -4,14 +4,17 @@
 
 {% block content %}
 <section class="wrapper emph-infos important">
-  <div class="title">Les stages</div>
+  <div class="title">{% trans 'The Summer Camps' %}</div>
   <div class="container">
     <p>
-      Les stages Girls Can Code! c’est une semaine d'initiation à la programmation pour les collégiennes et lycéennes.
+      {% blocktrans %}
+        The Girls Can Code! summer camp is an initiation week to programming for
+        teenage girls.
+      {% endblocktrans %}
     </p>
     <div class="highlight-row highlight-row-gaped">
       <div class="highlight">
-        <h2>Prochains stages</h2>
+        <h2>{% trans 'Next Summer Camps' %}</h2>
         <ul>
           {% for event in events %}
             <li>{{ event.center }}, la semaine du <em>{{ event.event_start|date:"DATE_FORMAT" }}</em></li>
@@ -21,15 +24,14 @@
       <div class="highlight">
         <h2>Pour s’inscrire</h2>
         <ul>
-            <li>Être une fille encore non bachelière</li>
-            <li>Habiter dans l'Union européenne ou en Suisse</li>
-            <li>Remplir le formulaire de candidature</li>
-            <li>Être motivée !</li>
+            <li>For girls without an high school diploma</li>
+            <li>For European Union or Swiss inhabitants</li>
+            <li>Complete the application form</li>
         </ul>
         {% if user.is_authenticated %}
-        <a href="application/form/{{current_edition}}" class="button style3 large">S'inscrire</a>
+        <a href="application/form/{{current_edition}}" class="button style3 large">{% trans 'Register' %}</a>
         {% else %}
-        <a href="user/register" class="button style3 large">S'inscrire</a>
+        <a href="user/register" class="button style3 large">{% trans 'Sign in' %}</a>
         {% endif %}
       </div>
       <p>
@@ -169,3 +171,4 @@
   </section>
 </div>
 {% endblock %}
+
