summary: pretty printing of event and permission fixed

--- a/prologin/gcc/templates/gcc/application/summary.html
+++ b/prologin/gcc/templates/gcc/application/summary.html
@@ -90,7 +90,7 @@
                     {% endfor %}
                     <ol class="event-wish-list">
                         {% for event in applic.list_of_assignation_wishes %}
-                            <li> {{event}} </li>
+                            <li> {{event.short_description}} </li>
                         {% endfor %}
                     </ol>
                 </ul>
