--- a/prologin/gcc/templates/gcc/application/review.html
+++ b/prologin/gcc/templates/gcc/application/review.html
@@ -12,8 +12,11 @@
 
 {% block content %}
   <section class="wrapper">
-    <div class="title">Candidates {{ edition }}</div>
+    <div class="title">Review</div>
     <div class="container">
+      <h3>
+        Candidates for {{event.short_description}} (edition {{event.edition}})
+      </h3>
       <ul class="applicant-list">
         {% for applicant in applicants %}
           <li id="applicant-{{applicant.pk}}">
@@ -23,13 +26,13 @@
                 <div class="labeladd-btn">+</div>
                 <div class="labeladd-dropdown-content">
                   {% for label in labels %}
-                    <a href="{% url 'gcc:add_applicant_label' applicant_id=applicant.pk label_id=label.pk %}">{{ label }}</a>
+                    <a href="{% url 'gcc:add_applicant_label' event_id=event.pk applicant_id=applicant.pk label_id=label.pk %}">{{ label }}</a>
                   {% endfor %}
                 </div>
               </div>
               <span class="label-list">
                 {% for label in applicant.labels.all %}
-                  <a class="label" href="{% url 'gcc:delete_applicant_label' applicant_id=applicant.pk label_id=label.pk %}">
+                  <a class="label" href="{% url 'gcc:delete_applicant_label' event_id=event.pk applicant_id=applicant.pk label_id=label.pk %}">
                     {{ label }}
                   </a>
                 {% endfor %}
