--- a/prologin/gcc/static/gcc/css/layout.css
+++ b/prologin/gcc/static/gcc/css/layout.css
@@ -697,6 +697,18 @@
     background: #3d4249 url("img/overlay.png");
 }
 
+/* Change locale */
+
+#change_locale {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-top: 1.5em;
+    padding-bottom: 1em;
+    max-width: 200px;
+}
+
 /* Copyright */
 
 #copyright {
