--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load utils %}
+{% load i18n %}
 {% load navigation %} {# defined in prologin app #}
 
 <!DOCTYPE HTML>
@@ -118,6 +120,29 @@
             </section>
           </div>
         </section>
+
+        <div id="change_locale">
+            <h3>{% trans "Change locale" %} <i class=" fa fa-globe"></i></h3>
+            {% get_current_language as LANGUAGE_CODE %}
+            <form action="{% url 'set_language' %}" method="post" id="change-lang-form" class="form-inline">
+              {% csrf_token %}
+              {# <input name="next" type="hidden" value="{{ redirect_to }}"/> #}
+              <select name="language" id="set-language" class="form-control" onchange="$('#change-lang-form').submit();">
+                {% get_available_languages as LANGUAGES %}
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                  <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                      selected="selected"{% endif %}>{{ language.name_local.title }}</option>
+                {% endfor %}
+              </select>
+              <noscript><input type="submit" class="btn btn-default" value="{% trans "Apply" %}"/></noscript>
+              {% if request.user.is_authenticated and LANGUAGE_CODE != request.user.preferred_locale %}
+                {% url 'gcc:edit' user.id as user_edit_url %}
+                <p><small class="text-muted">{% blocktrans with url=user_edit_url %}Save your
+        preferred locale in your <a href="{{ url }}#id_preferred_locale">user settings</a>.{% endblocktrans %}</small></p>
+              {% endif %}
+            </form>
+        </div>
         <div id="copyright">
           <ul>
             <li>&copy; Girls Can Code!</li>
