--- a/prologin/gcc/templates/gcc/users/profile.html
+++ b/prologin/gcc/templates/gcc/users/profile.html
@@ -16,7 +16,7 @@
 
           {% trans "<em>not provided</em>" as noinfo %}
 
-          {% if shown_user.id == user.id or see_private %}
+          {% if see_private %}
           <a href="{% url 'gcc:edit' shown_user.id %}" class="btn btn-default pull-right">
             <i class="fa fa-pencil"></i> {% trans "Edit profile" %}</a>
           {% endif %}
@@ -87,7 +87,7 @@
 
               <h3>{% trans "Applications" %}</h3>
 
-              {% if has_not_applied_last_edition %}
+              {% if not has_applied_to_current %}
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <table class="panel-title"><tbody><tr>
@@ -109,56 +109,56 @@
               </div>
               {% endif %}
 
-            </div>
 
-            {% for applicant in applications %}
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <table class="panel-title"><tbody><tr>
-                  <td width="100%">Edition {{applicant.edition}}</td>
-                  {% if applicant.edition.subscription_is_open %}
-                  <td class="text-right">
-                    <a  href="{% url 'gcc:application_form' edition=applicant.edition %}"
-                                            class="btn btn-default btn-xs">
-                       <i class="fa fa-pencil"></i> {% trans "Edit application" %}</a>
-                  </td>
-                  {% endif %}
-                </tr></tbody></table>
+              {% for applicant in applications %}
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <table class="panel-title"><tbody><tr>
+                      <td width="100%">Edition {{applicant.edition}}</td>
+                      {% if applicant.edition.subscription_is_open %}
+                      <td class="text-right">
+                        <a  href="{% url 'gcc:application_form' edition=applicant.edition %}"
+                                                class="btn btn-default btn-xs">
+                           <i class="fa fa-pencil"></i> {% trans "Edit application" %}</a>
+                      </td>
+                      {% endif %}
+                    </tr></tbody></table>
+                  </div>
+                  <div class="panel-body">
+                      {% if applicant.status == 0 %}
+                        <span class="badge badge-warning">{% trans "Pending" %} </span>
+                      {% endif %}
+                      {% if applicant.status == 1 %}
+                        <span class="badge badge-danger">{% trans "Rejected" %} </span>
+                      {% endif %}
+                      {% if applicant.status == 2 %}
+                        <span class="badge badge-success">{% trans "Selected" %} </span>
+                        <p> {% trans "You will soon receive your assignation." %} </p>
+                      {% endif %}
+                      {% if applicant.status == 3 %}
+                        <span class="badge badge-warning">{% trans "Accepted" %} </span>
+                        <p> {% trans "You have been assigned to:" %} </p>
+                        <ul>
+                        {% for event in applicant.list_of_assignation_event %}
+                            <li> {{event.short_description}} </li>
+                        {% endfor %}
+                        </ul>
+                        <p> {% trans "Please confirm your venue." %} </p>
+                      {% endif %}
+                      {% if applicant.status == 4 %}
+                        <span class="badge badge-success">{% trans "Confirmed" %} </span>
+                        <p> {% trans "You have been assigned to:" %} </p>
+                        <ul>
+                        {% for event in applicant.list_of_assignation_event %}
+                            <li> {{event.short_description}} </li>
+                        {% endfor %}
+                        </ul>
+                        <p>{% trans "And you confirmed your venue, see you there!" %} </p>
+                      {% endif %}
+                  </div>
               </div>
-              <div class="panel-body">
-                  {% if applicant.status == 0 %}
-                    <span class="badge badge-warning">{% trans "Pending" %} </span>
-                  {% endif %}
-                  {% if applicant.status == 1 %}
-                    <span class="badge badge-danger">{% trans "Rejected" %} </span>
-                  {% endif %}
-                  {% if applicant.status == 2 %}
-                    <span class="badge badge-success">{% trans "Selected" %} </span>
-                    <p> {% trans "You will soon receive your assignation." %} </p>
-                  {% endif %}
-                  {% if applicant.status == 3 %}
-                    <span class="badge badge-warning">{% trans "Accepted" %} </span>
-                    <p> {% trans "You have been assigned to:" %} </p>
-                    <ul>
-                    {% for event in applicant.list_of_assignation_event %}
-                        <li> {{event.short_description}} </li>
-                    {% endfor %}
-                    </ul>
-                    <p> {% trans "Please confirm your venue." %} </p>
-                  {% endif %}
-                  {% if applicant.status == 4 %}
-                    <span class="badge badge-success">{% trans "Confirmed" %} </span>
-                    <p> {% trans "You have been assigned to:" %} </p>
-                    <ul>
-                    {% for event in applicant.list_of_assignation_event %}
-                        <li> {{event.short_description}} </li>
-                    {% endfor %}
-                    </ul>
-                    <p>{% trans "And you confirmed your venue, see you there!" %} </p>
-                  {% endif %}
-              </div>
+            {% endfor %}
           </div>
-          {% endfor %}
 
             <div class="col-sm-12 col-md-4 compact-headings">
 
